fix: pin indexmap for rustc 1.79 compat + sed lockfile v4→v3

--- a/.github/workflows/build-program.yml
+++ b/.github/workflows/build-program.yml
@@ -53,6 +53,15 @@ jobs:
           sh -c "$(curl -sSfL https://release.anza.xyz/v2.1.5/install)"
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
 
+      - name: Pin deps compatible with cargo-build-sbf rustc 1.79
+        working-directory: program
+        run: |
+          # cargo-build-sbf ships rustc 1.79 — pin deps that need newer versions
+          # First downgrade lockfile from v4 to v3 if needed
+          sed -i 's/^version = 4$/version = 3/' Cargo.lock || true
+          # Pin indexmap to version compatible with rustc 1.79
+          cargo update indexmap@2.12.1 --precise 2.7.1 2>/dev/null || true
+
       - name: Build program (MAX_ACCOUNTS=${{ matrix.max_accounts }})
         working-directory: program
         run: |
