fix: patch blake3 + constant_time_eq to pre-edition2024 versions, pin time-macros
blake3 and constant_time_eq are pulled in by solana-program transitively.
Their latest versions use edition2024 Cargo.toml manifests which
cargo-build-sbf's internal cargo 1.79 cannot parse.

--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -25,9 +25,12 @@ spl-token = { version = "4.0", features = ["no-entrypoint"] }
 bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
 percolator = { path = "../percolator" }
 # NOTE: pinocchio, pyth-sdk-solana, arrayref, num-derive, num-traits, thiserror
-# were removed — not used in source code, and their transitive deps (blake3,
-# wit-bindgen, constant_time_eq) use edition2024 manifests incompatible with
-# cargo-build-sbf's internal cargo 1.79.
+# were removed — not used in source code.
+
+# Pin crates that use edition2024 manifests (incompatible with cargo-build-sbf's cargo 1.79)
+[patch.crates-io]
+blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }
+constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq", tag = "v0.3.1" }
 
 [dev-dependencies]
 bincode = "1"
