--- a/.github/workflows/build-program.yml
+++ b/.github/workflows/build-program.yml
@@ -63,16 +63,17 @@ jobs:
           cargo generate-lockfile
           
           # Pin crates incompatible with cargo-build-sbf's rustc 1.75.0-dev
-          # edition2024 manifest issues:
-          cargo update time --precise 0.3.36 2>/dev/null || true
-          cargo update time-macros --precise 0.2.18 2>/dev/null || true
-          cargo update constant_time_eq --precise 0.3.0 2>/dev/null || true
-          # rustc version requirements:
-          cargo update borsh-derive --precise 1.5.3 2>/dev/null || true
-          cargo update borsh --precise 1.5.3 2>/dev/null || true
-          cargo update toml_datetime --precise 0.6.8 2>/dev/null || true
-          cargo update toml_edit --precise 0.22.22 2>/dev/null || true
-          cargo update indexmap --precise 2.7.1 2>/dev/null || true
+          # Show errors instead of suppressing them
+          set +e
+          cargo update borsh-derive@1.6.0 --precise 1.5.3
+          cargo update borsh@1.6.0 --precise 1.5.3
+          cargo update toml_datetime@0.7.5 --precise 0.6.8
+          cargo update toml_edit@0.23.10 --precise 0.22.22
+          cargo update toml_parser@1.0.6 --precise 0.5.0 || cargo update toml_parser --precise 0.5.0 || true
+          cargo update indexmap@2.13.0 --precise 2.7.1
+          cargo update time-macros@0.2.27 --precise 0.2.18
+          cargo update constant_time_eq@0.4.2 --precise 0.3.1
+          set -e
           
           # Downgrade lockfile version from v4 to v3 LAST (after all cargo update commands)
           sed -i 's/^version = 4$/version = 3/' Cargo.lock
