chore(security): complete .env.example files with all required env vars (#19)
- Added missing vars to app/.env.example: NEXT_PUBLIC_HELIUS_RPC_URL, SOLANA_RPC_URL, NEXT_PUBLIC_DEFAULT_NETWORK, PROGRAM_ID
- Added missing vars to packages/server/.env.example: FALLBACK_RPC_URL, ALL_PROGRAM_IDS, CRANK_INACTIVE_INTERVAL_MS
- Removed hardcoded Helius API key placeholder from server .env.example

Audit: all source .ts/.tsx files already use process.env references — no hardcoded secrets found in tracked code.

Co-authored-by: Cobra <cobra@drivora.com>

--- a/app/.env.example
+++ b/app/.env.example
@@ -2,6 +2,11 @@
 HELIUS_API_KEY=
 # Helius RPC API key (client-side, exposed to browser)
 NEXT_PUBLIC_HELIUS_API_KEY=
+# Optional: override the full RPC URL (client-side)
+NEXT_PUBLIC_HELIUS_RPC_URL=
+
+# Solana RPC URL (server-side, optional override)
+SOLANA_RPC_URL=
 
 # API authentication token for POST routes (optional, skipped if empty)
 API_AUTH_TOKEN=
@@ -11,14 +16,15 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
-# Solana network (devnet | mainnet-beta)
-NEXT_PUBLIC_SOLANA_NETWORK=devnet
+# Solana network (devnet | mainnet)
+NEXT_PUBLIC_DEFAULT_NETWORK=devnet
 
 # Crank keypair (base58-encoded secret key)
 CRANK_KEYPAIR=
 
 # Program ID override (optional)
 NEXT_PUBLIC_PROGRAM_ID=
+PROGRAM_ID=
 
 # Indexer API key (for prices/trades/stats endpoints)
 INDEXER_API_KEY=
