feat: add solana-verify support for verified program builds (#31)
- Add root-level Cargo.lock (copy of program/Cargo.lock) for reproducible builds
- Add target symlink (target -> program/target) for solana-verify compatibility
- Add repository URL to program/Cargo.toml metadata
- Add verified-build.yml GitHub Actions workflow using solana-verify
- Add VERIFY.md documentation for program verification

Reference: MidTermDev/percolator-sov (commits 285f90e, b86e867)

Co-authored-by: Cobra <cobra@drivora.com>

--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -3,6 +3,7 @@ name = "percolator-prog"
 version = "0.1.0"
 edition = "2021"
 publish = false
+repository = "https://github.com/dcccrypto/percolator-launch"
 
 [lib]
 crate-type = ["cdylib", "lib"]
