--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_API_URL=https://percolator-api-production.up.railway.app
 # Supabase (if needed for bug reporting)
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_API_URL="https://percolator-api-production.up.railway.app"
