--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
@@ -24,6 +26,7 @@
     "@types/node": "^25.2.2",
     "@types/ws": "^8.5.14",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^4.0.18"
   }
 }
