--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@percolator/core": "workspace:*",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^25.2.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^4.0.18"
   }
 }
