--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,9 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@percolator/core": "workspace:*",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^4.0.18"
   }
 }
