--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@percolator/core": "workspace:*",
+    "@sentry/node": "^10.39.0",
     "@solana/web3.js": "^1.98.0",
     "@supabase/supabase-js": "^2.49.1",
     "bs58": "^6.0.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
