feat: CI/CD pipeline + Dockerfiles for all services

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,31 @@
-# API Backend URL (Railway)
-NEXT_PUBLIC_API_URL=https://percolator-api-production.up.railway.app
+# RPC Configuration
+# Get your Helius API key from: https://dev.helius.xyz/
+RPC_URL=https://devnet.helius-rpc.com/?api-key=YOUR_KEY
+FALLBACK_RPC_URL=https://api.devnet.solana.com
+HELIUS_API_KEY=
 
-# Supabase (if needed for bug reporting)
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-NEXT_PUBLIC_API_URL="https://percolator-api-production.up.railway.app"
+# Database Configuration
+# Get these from your Supabase project settings
+SUPABASE_URL=
+SUPABASE_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# Program IDs
+# Primary program ID for this deployment
+PROGRAM_ID=FxfD37s1AZTeWfFQps9Zpebi2dNQ9QSSDtfMKdbsfKrD
+
+# All program IDs to monitor (comma-separated)
+ALL_PROGRAM_IDS=FxfD37s1AZTeWfFQps9Zpebi2dNQ9QSSDtfMKdbsfKrD,FwfBKZXbYr4vTK23bMFkbgKq3npJ3MSDxEaKmq9Aj4Qn,g9msRSV3RFRFSqMeyjmiSAHfKcLFqYSWB7YXZBhNb2V
+
+# Keeper Configuration
+# Base58-encoded keypair for cranking operations
+# Example: [123,45,67,...] or base58 string
+CRANK_KEYPAIR=
+
+# API Configuration
+PORT=4000
+CORS_ORIGINS=http://localhost:3000
+
+# Monitoring (Optional)
+# Sentry DSN for error tracking
+SENTRY_DSN=
