--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@gsap/react": "^2.1.2",
     "@metaplex-foundation/mpl-token-metadata": "2.13.0",
     "@percolator/core": "workspace:*",
+    "@sentry/nextjs": "^10.39.0",
     "@solana/spl-token": "^0.4.14",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
