--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "build:core": "pnpm --filter @percolator/core build",
     "test": "pnpm -r test",
     "test:unit": "pnpm -r test:unit",
-    "test:integration": "pnpm --filter @percolator/server test:integration",
     "test:e2e": "playwright test",
-    "test:coverage": "pnpm -r test:coverage"
+    "test:coverage": "pnpm -r test:coverage",
+    "lint": "eslint packages/*/src/**/*.ts",
+    "format": "prettier --write packages/*/src/**/*.ts",
+    "format:check": "prettier --check packages/*/src/**/*.ts"
   },
   "engines": {
     "node": ">=20"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
     "msw": "^2.12.10",
     "playwright": "^1.58.2",
+    "prettier": "^3.2.5",
     "tsx": "^4.21.0"
   },
   "dependencies": {
