--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# ============================================================================
+# SHARED CONFIGURATION
+# ============================================================================
+
 # RPC Configuration
 # Get your Helius API key from: https://dev.helius.xyz/
 RPC_URL=https://devnet.helius-rpc.com/?api-key=YOUR_KEY
@@ -17,15 +21,60 @@ PROGRAM_ID=FxfD37s1AZTeWfFQps9Zpebi2dNQ9QSSDtfMKdbsfKrD
 # All program IDs to monitor (comma-separated)
 ALL_PROGRAM_IDS=FxfD37s1AZTeWfFQps9Zpebi2dNQ9QSSDtfMKdbsfKrD,FwfBKZXbYr4vTK23bMFkbgKq3npJ3MSDxEaKmq9Aj4Qn,g9msRSV3RFRFSqMeyjmiSAHfKcLFqYSWB7YXZBhNb2V
 
+# Monitoring (Optional)
+# Sentry DSN for error tracking
+SENTRY_DSN=
+
+# ============================================================================
+# API SERVICE (packages/api)
+# ============================================================================
+
+# Server Configuration
+API_PORT=4000
+PORT=4000
+
+# Authentication
+# Generate with: openssl rand -hex 32
+API_AUTH_KEY=
+
+# WebSocket Authentication
+# Generate with: openssl rand -hex 32
+WS_AUTH_SECRET=
+WS_AUTH_REQUIRED=false
+
+# CORS Configuration (comma-separated origins)
+CORS_ORIGINS=http://localhost:3000
+
+# Rate Limiting
+MAX_WS_CONNECTIONS=1000
+
+# ============================================================================
+# INDEXER SERVICE (packages/indexer)
+# ============================================================================
+
+# Server Configuration
+INDEXER_PORT=4001
+
+# API Authentication for Indexer
+# Generate with: openssl rand -hex 32
+INDEXER_API_KEY=
+
+# Webhook Configuration
+WEBHOOK_URL=
+HELIUS_WEBHOOK_SECRET=
+
+# ============================================================================
+# KEEPER SERVICE (packages/keeper)
+# ============================================================================
+
 # Keeper Configuration
 # Base58-encoded keypair for cranking operations
 # Example: [123,45,67,...] or base58 string
 CRANK_KEYPAIR=
 
-# API Configuration
-PORT=4000
-CORS_ORIGINS=http://localhost:3000
+# ============================================================================
+# FRONTEND (apps/web)
+# ============================================================================
 
-# Monitoring (Optional)
-# Sentry DSN for error tracking
-SENTRY_DSN=
+# API Endpoint
+NEXT_PUBLIC_API_URL=http://localhost:4000
