fix: route all client-side API calls through Next.js proxy to avoid CORS
Root cause: useLivePrice, usePriceRouter, useTrade, useWithdraw were
calling the backend API directly from the browser using getBackendUrl().
This bypassed the Next.js rewrite proxy, causing CORS errors because
the browser was hitting a different origin.

Fix: All client-side fetch calls now go through /api/* which Next.js
rewrites to the backend server-side (no CORS).

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,7 +17,9 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
-    "types": ["vitest/globals"],
+    "types": [
+      "vitest/globals"
+    ],
     "plugins": [
       {
         "name": "next"
@@ -34,7 +36,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts"
+    ".next/dev/types/**/*.ts",
+    ".next/dev/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
