--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -253,6 +253,12 @@ jobs:
       # Run audit at high severity only.
       # GHSA-3gc7-fjrx-p6mg (bigint-buffer): transitive via @solana/spl-token,
       # no patched version exists upstream — ignored until Solana publishes a fix.
+      - name: Build core package
+        run: pnpm --filter @percolator/core build
+
+      - name: Build shared package
+        run: pnpm --filter @percolator/shared build
+
       - name: Run security audit
         run: pnpm audit --audit-level=high || true
 
