feat: Risk Engine Simulator — full feature with tests (#214)
* feat(simulator): Phase 1 — deploy script, faucet API, sim tables

- scripts/deploy-sim.ts: creates simUSDC SPL mint + 3 sim markets
  (SOL/USD, BTC/USD, ETH/USD) with admin oracle mode; saves to
  config/sim-markets.json
- app/api/simulate/faucet/route.ts: POST /api/simulate/faucet
  mints 10k simUSDC to wallet, 24h rate limit via sim_faucet_claims
- config/sim-markets.json: placeholder structure for deploy output
- supabase/migrations/023_simulator_tables.sql: sim_faucet_claims,
  sim_leaderboard, sim_leaderboard_history, sim_scenarios + RLS

* feat(simulator): Phase 1 — /simulate page + all components

- app/simulate/page.tsx — market selector, SlabProvider wiring, desktop/mobile layouts
- SimulatorHeader — title, market tabs, devnet badge, active scenario indicator
- SimOnboarding — 4-step stepper: connect wallet → devnet SOL → simUSDC → trade
- SimRiskDashboard — reuses EngineHealthCard, FundingRateCard, InsuranceLPPanel,
  LiquidationAnalytics, CrankHealthCard, SystemCapitalCard in grid
- SimLeaderboard — Supabase sim_leaderboard, rank/PnL/ROI/WinRate/Liqs, weekly reset
- ScenarioPanel — vote on Flash Crash/Short Squeeze/Black Swan/High Vol/Gentle Trend,
  countdown timer, cooldown indicator
- SimExplainer — contextual insight cards from useEngineState() (funding direction,
  liquidation events, insurance fund absorption)
- app/config/sim-markets.json — devnet market config (placeholder slab addresses)

Build: tsc --noEmit clean, next build exits 0

* docs: add Kani audit, PR audits, and simulator spec

* feat(simulator): Phase 2 — Oracle service, bot fleet, scenario API

## Services
- services/sim-oracle.ts: Fetches real prices from Pyth Hermes every 2s,
  applies scenario multipliers (flash crash, short squeeze, black swan,
  high volatility, gentle trend), pushes PushOraclePrice + cranks markets.
  Reads active scenarios from Supabase sim_scenarios table via REST API.

- services/sim-bots.ts: 15-

--- a/.dockerignore
+++ b/.dockerignore
@@ -59,7 +59,8 @@ playwright.config.ts
 
 # Misc
 .keys
-services
+# services — needed for sim-oracle-bots Dockerfile.sim
+# services
 supabase
 scripts
 render-*.cjs
