--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build:app": "pnpm --filter @percolator/app build",
     "build:core": "pnpm --filter @percolator/core build",
     "test": "pnpm -r test",
+    "test:app": "cd app && pnpm test",
+    "test:core": "cd packages/core && pnpm test",
+    "test:hooks": "cd app && pnpm vitest run __tests__/hooks/",
     "test:unit": "pnpm -r test:unit",
     "test:e2e": "playwright test",
     "test:coverage": "pnpm -r test:coverage",
@@ -33,6 +36,7 @@
   "dependencies": {
     "@solana/spl-token": "^0.3.11",
     "@solana/web3.js": "^1.98.4",
+    "dotenv": "^17.3.1",
     "pg": "^8.18.0"
   },
   "pnpm": {
