ci: fix test.yml workflow file error — secrets context in step if
The secrets context cannot be used directly in step-level if
conditions without ${{ }} wrapping. Move the CODECOV_TOKEN check
to a job-level env var (HAS_CODECOV_TOKEN) and reference it via
env context in step conditions instead.

Fixes the 'workflow file issue' error on main after PR #261 merge.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
     name: Unit Tests
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    env:
+      HAS_CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN != '' }}
     
     steps:
       - name: Checkout code
@@ -59,7 +61,7 @@ jobs:
 
       - name: Upload coverage (shared)
         uses: codecov/codecov-action@v4
-        if: always() && secrets.CODECOV_TOKEN != ''
+        if: always() && env.HAS_CODECOV_TOKEN == 'true'
         with:
           files: ./packages/shared/coverage/coverage-final.json
           flags: unit-shared
@@ -68,7 +70,7 @@ jobs:
 
       - name: Upload coverage (api)
         uses: codecov/codecov-action@v4
-        if: always() && secrets.CODECOV_TOKEN != ''
+        if: always() && env.HAS_CODECOV_TOKEN == 'true'
         with:
           files: ./packages/api/coverage/coverage-final.json
           flags: unit-api
@@ -83,6 +85,7 @@ jobs:
     env:
       RPC_URL: ${{ secrets.DEVNET_RPC_URL || 'https://api.devnet.solana.com' }}
       DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+      HAS_CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN != '' }}
     
     steps:
       - name: Checkout code
@@ -117,7 +120,7 @@ jobs:
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
-        if: always() && secrets.CODECOV_TOKEN != ''
+        if: always() && env.HAS_CODECOV_TOKEN == 'true'
         with:
           files: ./packages/api/coverage/coverage-final.json
           flags: integration
