ci: fix fuzz test pre-check — pnpm --if-present exits 0 for missing scripts
The previous check used 'pnpm run --if-present test:fuzz' which
returns exit 0 when the script doesn't exist (by design), causing
the fuzz step to always run and fail with exit 254.

Simplified to a direct package.json script check via node.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -222,16 +222,12 @@ jobs:
       - name: Check for fuzz test script
         id: fuzz-check
         run: |
-          if cd packages/core && pnpm run --silent --if-present test:fuzz --help > /dev/null 2>&1; then
+          cd packages/core
+          if node -e "const p=require('./package.json'); if(!p.scripts?.['test:fuzz']) process.exit(1)" 2>/dev/null; then
             echo "has_fuzz=true" >> "$GITHUB_OUTPUT"
           else
-            # Check if the script exists in package.json
-            if node -e "const p=require('./package.json'); process.exit(p.scripts?.['test:fuzz'] ? 0 : 1)" 2>/dev/null; then
-              echo "has_fuzz=true" >> "$GITHUB_OUTPUT"
-            else
-              echo "has_fuzz=false" >> "$GITHUB_OUTPUT"
-              echo "ℹ️  No test:fuzz script in packages/core — skipping"
-            fi
+            echo "has_fuzz=false" >> "$GITHUB_OUTPUT"
+            echo "ℹ️  No test:fuzz script in packages/core — skipping"
           fi
 
       - name: Run fuzz tests
