ci: enable E2E tests in CI — Playwright webServer + start script
PERC-035: E2E tests (65 across 8 suites) exist but CI skipped them
because webServer was disabled in CI (process.env.CI ? undefined).

Changes:
- playwright.config.ts: Enable webServer in CI using 'pnpm start'
  (production build) instead of 'pnpm dev' (dev server)
- package.json: Add root 'start' script that runs the Next.js
  production server via @percolator/app
- test.yml: Update E2E job comments

The E2E CI job already builds the app before tests run. Playwright
will now auto-start the production server on localhost:3000.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -161,9 +161,8 @@ jobs:
       - name: Build application
         run: pnpm run build
 
-      # E2E tests require a live devnet wallet + running app.
-      # passWithNoTests=true in playwright.config.ts prevents CI failure
-      # when the e2e/ directory is absent (e.g. during active development).
+      # Playwright auto-starts the production server (pnpm start) via webServer config.
+      # The check below skips E2E when no test files exist (e.g. new packages).
       - name: Check for E2E tests
         id: e2e-check
         run: |
