feat: complete Sentry integration + error tracking for frontend & API
PERC-047: Add production error tracking across the full stack.

Frontend (Next.js):
- Fix error.tsx to report to Sentry (was only console.error)
- Add instrumentation.ts for proper server-side Sentry init
  (onRequestError captures SSR failures with route context)
- Add SentryUserContext: sets wallet address as Sentry user ID
  for filtering errors by wallet (mounted in WalletProvider)
- Enable conditional source map uploads in next.config.ts:
  uploads when SENTRY_AUTH_TOKEN is set (CI only), disabled locally
- Configure org/project/authToken for Sentry webpack plugin
- Tree-shake Sentry logger statements (disableLogger: true)

API Server (Hono):
- Add @sentry/node dependency to packages/api
- Create middleware/sentry.ts with:
  - initSentry(): one-time init with DSN, environment, release,
    10% trace sampling, HTTP integration, 404 filtering
  - sentryMiddleware(): Hono middleware wrapping requests in Sentry
    scope with method/path tags, API key user context, 5xx reporting
  - flushSentry(): graceful shutdown helper
- Wire into index.ts: init before app, middleware after compress,
  captureException in onError handler, flush in shutdown sequence

Environment:
- Add SENTRY_DSN, SENTRY_AUTH_TOKEN, SENTRY_ORG, SENTRY_PROJECT
  to app/.env.example
- Add SENTRY_DSN, API_VERSION to packages/api/.env.example

Pre-existing (already implemented):
- ErrorBoundary component with Sentry.captureException
- sentry.client.config.ts, sentry.server.config.ts, sentry.edge.config.ts
- global-error.tsx with Sentry reporting
- withSentryConfig in next.config.ts

11 files changed, +231/-3 lines.

--- a/app/.env.example
+++ b/app/.env.example
@@ -28,3 +28,16 @@ PROGRAM_ID=
 
 # Indexer API key (for prices/trades/stats endpoints)
 INDEXER_API_KEY=
+
+
+# ── Sentry Error Tracking ──
+# Frontend DSN (client-side, safe to expose)
+NEXT_PUBLIC_SENTRY_DSN=
+# Server-side DSN (can be same as above or separate)
+SENTRY_DSN=
+# Auth token for source map uploads (CI/CD only, NEVER commit)
+# Generate at: https://sentry.io/settings/auth-tokens/
+SENTRY_AUTH_TOKEN=
+# Sentry org and project slugs
+SENTRY_ORG=percolator
+SENTRY_PROJECT=percolator-app
