--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -24,3 +24,10 @@ MAX_WS_CONNECTIONS=500
 
 # Solana RPC
 SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+
+
+# ── Sentry Error Tracking ──
+# DSN for API server error reporting
+SENTRY_DSN=
+# Release version (defaults to api@0.1.0)
+API_VERSION=
