--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,7 @@
     "@hono/node-server": "^1.13.8",
     "@percolator/core": "workspace:*",
     "@percolator/shared": "workspace:*",
+    "@sentry/node": "^10.39.0",
     "@solana/web3.js": "^1.98.0",
     "@supabase/supabase-js": "^2.49.1",
     "dotenv": "^16.4.7",
