--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -23,8 +23,8 @@ cu-audit = []                   # Enable compute unit checkpoints for CU auditin
 unsafe_close = []               # TEST-ONLY: Skip all validation in CloseSlab instruction — NEVER use on mainnet!
 
 [dependencies]
-solana-program = "1.18"
-spl-token = { version = "4.0", features = ["no-entrypoint"] }
+solana-program = "2.2.1"
+spl-token = { version = "6.0", features = ["no-entrypoint"] }
 bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
 percolator = { path = "../percolator" }
 # NOTE: pinocchio, pyth-sdk-solana, arrayref, num-derive, num-traits, thiserror
@@ -36,13 +36,13 @@ blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }
 
 [dev-dependencies]
 bincode = "1"
-solana-sdk = "1.18"
-solana-client = "1.18"
+solana-sdk = "2.2.1"
+solana-client = "2.2.1"
 rand = "0.8"
 rand_xorshift = "0.3"
 proptest = "1.4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serial_test = "3"
-litesvm = "0.1"
+litesvm = "=0.6.1"
 shellexpand = "3"
 serde_json = "1"
